# dishka-pyramid

./: .gitignore  README.md  justfile  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  release_pypi.yaml
examples/: pyramid_app.py
src/dishka_pyramid/: __init__.py  _pyramid.py
tests/: common.py  conftest.py  test_pyramid.py
